2011-06-30	The InnoDB Team

	* row/row0row.c:
	Fix Bug#12637786 Wrong secondary index entries on CHAR and VARCHAR
	columns in ROW_FORMAT=DYNAMIC and ROW_FORMAT=COMPRESSED

2011-06-16	The InnoDB Team

	* btr/btr0cur.c, buf/buf0buddy.c, buf/buf0buf.c, buf/buf0lru.c,
	include/buf0buddy.h, include/buf0buddy.ic, include/buf0buf.h,
	include/buf0buf.ic, include/buf0lru.h, include/buf0types.h:
	Fix Bug#61188 DROP TABLE extremely slow

2011-06-16	The InnoDB Team

	* buf/buf0buddy.c, buf/buf0buf.c, buf/buf0flu.c, buf/buf0lru.c,
	include/buf0buf.h, include/buf0lru.h:
	Fix Bug#61341 buf_LRU_insert_zip_clean can be O(N) on LRU length

2011-06-16	The InnoDB Team

	* page/page0zip.c, rem/rem0rec.c:
	Fix Bug#61191 question about page_zip_available()

2011-06-16	The InnoDB Team

	* btr/btr0btr.c, btr/btr0cur.c, include/btr0btr.h, include/btr0cur.h,
	include/btr0cur.ic, include/buf0buf.h, include/buf0buf.ic,
	include/page0cur.ic, include/page0page.h, include/page0page.ic,
	include/sync0rw.ic, include/sync0sync.h, page/page0cur.c,
	page/page0page.c, row/row0ins.c, row/row0upd.c,
	sync/sync0rw.c, sync/sync0sync.c:
	Fix Bug#12612184 Race condition after btr_cur_pessimistic_update()

2011-06-09	The InnoDB Team
	* btr/btr0cur.c, include/rem0rec.h, include/rem0rec.ic,
	* row/row0row.c, row/row0vers.c, trx/trx0rec.c:
	Instrumentation for Bug#12612184 Race condition in row_upd_clust_rec()

2011-05-19	The InnoDB Team

	* row/row0row.c:
	Fix Bug#12429576 Assertion failure on purge of column prefix index

2011-04-07	The InnoDB Team

	* handler/ha_innodb.cc, handler/ha_innodb.h, handler/handler0alter.cc:
	Fix Bug #52409 Assertion failure: long semaphore wait

2011-04-07	The InnoDB Team

	* handler/ha_innodb.cc, include/trx0trx.h, include/trx0undo.h,
	log/log0log.c, trx/trx0sys.c, trx/trx0trx.c, trx/trx0undo.c:
	Fix Bug #59641 Prepared XA transaction in system after hard crash
	causes future shutdown hang

2011-03-30	The InnoDB Team

	* srv/srv0srv.c, sync/sync0arr.h, sync/sync0arr.c: